# Reader-for-HarmonyOS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build-profile.json5  hvigorw  oh-package.json5  package.json
.claude/commands/: harmonyos-loop.md
AppScope/: app.json5
_archived_planning_2026-06-24/docs_PLANNING/: HARMONYOS_BASELINE_AUDIT.md  HARMONYOS_BLOCKERS_AND_DECISIONS.md  HARMONYOS_BRIDGE_API_SPEC.md  HARMONYOS_CAPABILITY_MATRIX.yml  HARMONYOS_CORE_LEGADO_CAPABILITY_GAP_MATRIX.json  HARMONYOS_CRON_LOOP_SETUP.md  HARMONYOS_DEVICE_RUNTIME_CI_GATE.md  HARMONYOS_DEVICE_RUNTIME_EXECUTION_REPORT.md  HARMONYOS_DTO_BOUNDARY.md  HARMONYOS_HEADLESS_CLOSURE_REPORT.md  HARMONYOS_HOME_DASHBOARD_LOCAL_BINDING_REPORT.md  HARMONYOS_LOOP_STATE.yml  HARMONYOS_VALIDATION_RC_PLAN.md  READER_HARMONYOS_AUTODEV_QUEUE.md  READER_HARMONYOS_CORE_HANDOFF.md
_archived_planning_2026-06-24/docs_architecture/: HARMONYOS_RUNTIME_TRACK_ADR.md
docs/: CORE_ADAPTER_EVIDENCE_TIERS.md  HARMONYOS_NAPI_RUNTIME_SMOKE_REPORT.md  HARMONYOS_REAL_DEVICE_PREFLIGHT_RUNBOOK.md
docs/PLANNING/: HARMONYOS_AUTODEV_QUEUE.md  (+11 more)
entry/: build-profile.json5  oh-package.json5
entry/src/main/cpp/: CMakeLists.txt  reader_napi.cpp
entry/src/main/cpp/types/libreader_core_napi/: Index.d.ts  oh-package.json5
hvigor/: hvigor-config.json5
scripts/: build_signed_hap.sh  preflight_real_device_runtime_smoke.sh  run_device_runtime_smoke.sh  run_real_device_runtime_evidence.sh  validate_device_runtime_smoke_artifact.py  validate_device_runtime_smoke_fail_artifact.py  validate_harmonyos_core_legado_gap_matrix.py  validate_real_device_runtime_smoke_artifact.py
(+119 files in other folders)
